--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                     Travel To explore
                 </h1>
                 <p class="text-cover">
-                    i Tincidunt Augue Interdum Velit.
+                    Lorem Ipsum Dolor Sit Amet, Consectetur Adipiscing Elit, Sed Do Eiusmod Tempor Incididunt Ut Labore Et Dolore Magna Aliqua. Ultricies Mi Eget Mauris Pharetra. Amet Risus Nullam Eget Felis Eget Nunc Lobortis. Purus In Massa Tempor Nec. Porta Nibh Venenatis Cras Sed. Viverra Ipsum Nunc Aliquet Bibendum Enim. Risus Pretium Quam Vulputate Dignissim Suspendisse In. Non Quam Lacus Suspendisse Faucibus Interdum Posuere Lorem Ipsum Dolor. Facilisi Cras Fermentum Odio Eu Feugiat Pretium Nibh Ipsum. Risus Sed Vulputate Odio Ut Enim Blandit Volutpat Maecenas. Netus Et Malesuada Fames Ac Turpis Egestas. Sed Arcu Non Odio Euismod Lacinia At Quis Risus Sed. Praesent Elementum Facilisis Leo Vel Fringilla Est Ullamcorper. Ullamcorper Dignissim Cras Tincidunt Lobortis Feugiat Vivamus. Elit Pellentesque Habitant Morbi Tristique Senectus Et Netus.
+
                 </p>
             </div>
 
