--- a/index.html
+++ b/index.html
@@ -113,15 +113,171 @@
             </div>
             <div class="tours flex">
                 <div class="tour-box">
-                    <img src="images/Singapore.jpg" alt="photo">
+                    <img src="images/Singapore.svg" alt="photo">
+                    <h2>Singapore</h2>
+                    <p>Singapore, officially the Republic of Singapore, is a sovereign island city-state in maritime Southeast Asia.</p>     
+                                        <div class="icons-price">
+                    <div class="icons-main-box">
+                        <div class="icons-box">
+
+                        <img class="icon1" src="images/hotel.svg" alt="hotel">
+                        </div>
+                        <div class="icons-box">
+
+                        <img class="icon2" src="images/food.svg" alt="food">
+                        </div>
+                        <div class="icons-box">
+
+                        <img class="icon3" src="images/plane.svg" alt="plane">
+                        </div>
+                    </div>
+
+                    <span class="price">₹ 38,800</span>
+                </div>
+                <div class="kms-night">
+                    <p class="kms"> 1000 Kms</p>
+                    <p class="night"> Approx 2 night trip</p>
+                </div>
                 </div>
                 <div class="tour-box">
-                    <img src="images/Thailand.jpg" alt="photo">
+                    <img src="images/Thailand.svg" alt="photo">
+                    <h2>Thailand</h2>
+                    <p>Thailand is a Southeast Asian country. It's known for tropical beaches, opulent royal palaces</p>
+                                        <div class="icons-price">
+                    <div class="icons-main-box">
+                        <div class="icons-box">
+
+                        <img class="icon1" src="images/hotel.svg" alt="hotel">
+                        </div>
+                        <div class="icons-box">
+
+                        <img class="icon2" src="images/food.svg" alt="food">
+                        </div>
+                        <div class="icons-box">
+
+                        <img class="icon3" src="images/plane.svg" alt="plane">
+                        </div>
+                    </div>
+
+                    <span class="price">₹ 38,800</span>
+                </div>
+                <div class="kms-night">
+                    <p class="kms"> 1000 Kms</p>
+                    <p class="night"> Approx 2 night trip</p>
+                </div>
                 </div>
                 <div class="tour-box">
-                    <img src="images/Paris.jpg" alt="photo">
+                    <img src="images/Paris.svg" alt="photo">
+                    <h2>Paris</h2>
+                    <p>Paris, France's capital, is a major European city and a global center for art, fashion, gastronomy and culture.</p>
+                                        <div class="icons-price">
+                    <div class="icons-main-box">
+                        <div class="icons-box">
+
+                        <img class="icon1" src="images/hotel.svg" alt="hotel">
+                        </div>
+                        <div class="icons-box">
+
+                        <img class="icon2" src="images/food.svg" alt="food">
+                        </div>
+                        <div class="icons-box">
+
+                        <img class="icon3" src="images/plane.svg" alt="plane">
+                        </div>
+                    </div>
+
+                    <span class="price">₹ 38,800</span>
+                </div>
+                <div class="kms-night">
+                    <p class="kms"> 1000 Kms</p>
+                    <p class="night"> Approx 2 night trip</p>
+                </div>
+                </div>
+                <div class="tour-box">
+                    <img src="images/New-Zealand.svg" alt="photo">
+                    <h2>New Zealand</h2>
+                    <p>New Zealand is an island country in the southwestern Pacific Ocean. It consists of two main landmasses</p>
+                                        <div class="icons-price">
+                    <div class="icons-main-box">
+                        <div class="icons-box">
+
+                        <img class="icon1" src="images/hotel.svg" alt="hotel">
+                        </div>
+                        <div class="icons-box">
+
+                        <img class="icon2" src="images/food.svg" alt="food">
+                        </div>
+                        <div class="icons-box">
+
+                        <img class="icon3" src="images/plane.svg" alt="plane">
+                        </div>
+                    </div>
+
+                    <span class="price">₹ 38,800</span>
+                </div>
+                <div class="kms-night">
+                    <p class="kms"> 1000 Kms</p>
+                    <p class="night"> Approx 2 night trip</p>
+                </div>
+                </div>
+                <div class="tour-box">
+                    <img src="images/Bora-Bora.svg" alt="photo">
+                    <h2>Bora Bora</h2>
+                    <p>Bora Bora is a small South Pacific island northwest of Tahiti in French Polynesia. Surrounded by sand</p>
+                                        <div class="icons-price">
+                    <div class="icons-main-box">
+                        <div class="icons-box">
+
+                        <img class="icon1" src="images/hotel.svg" alt="hotel">
+                        </div>
+                        <div class="icons-box">
+
+                        <img class="icon2" src="images/food.svg" alt="food">
+                        </div>
+                        <div class="icons-box">
+
+                        <img class="icon3" src="images/plane.svg" alt="plane">
+                        </div>
+                    </div>
+
+                    <span class="price">₹ 38,800</span>
+                </div>
+                <div class="kms-night">
+                    <p class="kms"> 1000 Kms</p>
+                    <p class="night"> Approx 2 night trip</p>
+                </div>
+                </div>
+                <div class="tour-box">
+                    <img src="images/London.svg" alt="photo">
+                    <h2>London</h2>
+                    <p>London, the capital of England and the United Kingdom, is a 21st-century city with history stretching</p>
+                    <div class="icons-price">
+                    <div class="icons-main-box">
+                        <div class="icons-box">
+
+                        <img class="icon1" src="images/hotel.svg" alt="hotel">
+                        </div>
+                        <div class="icons-box">
+
+                        <img class="icon2" src="images/food.svg" alt="food">
+                        </div>
+                        <div class="icons-box">
+
+                        <img class="icon3" src="images/plane.svg" alt="plane">
+                        </div>
+                    </div>
+
+                    <span class="price">₹ 38,800</span>
+                </div>
+                <div class="kms-night">
+                    <p class="kms"> 1000 Kms</p>
+                    <p class="night"> Approx 2 night trip</p>
+                </div>
                 </div>
             </div>
+        </section>
+        <section class="blogs">
+            .
         </section>
     </div>
 </body>
