add fixed header

--- a/index.html
+++ b/index.html
@@ -277,7 +277,13 @@
             </div>
         </section>
         <section class="blogs">
-            .
+            <div class="main-guide">
+                <h4>blogs</h4>
+                <div class="guid-boxes">
+                    
+
+                </div>
+            </div>
         </section>
     </div>
 </body>
