changed texts for nights

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 </div>
                 <div class="kms-night">
                     <p class="kms"> 1000 Kms</p>
-                    <p class="night"> Approx 2 night trip</p>
+                    <p class="night"> Approx 1 night trip</p>
                 </div>
                 </div>
                 <div class="tour-box">
@@ -244,7 +244,7 @@
                 </div>
                 <div class="kms-night">
                     <p class="kms"> 1000 Kms</p>
-                    <p class="night"> Approx 2 night trip</p>
+                    <p class="night"> Approx 2 night 2 day trip</p>
                 </div>
                 </div>
                 <div class="tour-box">
@@ -271,7 +271,7 @@
                 </div>
                 <div class="kms-night">
                     <p class="kms"> 1000 Kms</p>
-                    <p class="night"> Approx 2 night trip</p>
+                    <p class="night"> Approx 3 night 2 day trip</p>
                 </div>
                 </div>
             </div>
@@ -280,7 +280,7 @@
             <div class="main-guide">
                 <h4>blogs</h4>
                 <div class="guid-boxes">
-                    
+
 
                 </div>
             </div>
