--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </div>
             <div class="tours flex">
                 <div class="tour-box">
-                    <img src="images/Singapore.svg" alt="photo">
+                    <img src="images/Singapore.png" alt="photo">
                     <h2>Singapore</h2>
                     <p>Singapore, officially the Republic of Singapore, is a sovereign island city-state in maritime Southeast Asia.</p>     
                                         <div class="icons-price">
@@ -140,7 +140,7 @@
                 </div>
                 </div>
                 <div class="tour-box">
-                    <img src="images/Thailand.svg" alt="photo">
+                    <img src="images/Thailand.png" alt="photo">
                     <h2>Thailand</h2>
                     <p>Thailand is a Southeast Asian country. It's known for tropical beaches, opulent royal palaces</p>
                                         <div class="icons-price">
@@ -167,7 +167,7 @@
                 </div>
                 </div>
                 <div class="tour-box">
-                    <img src="images/Paris.svg" alt="photo">
+                    <img src="images/Paris.png" alt="photo">
                     <h2>Paris</h2>
                     <p>Paris, France's capital, is a major European city and a global center for art, fashion, gastronomy and culture.</p>
                                         <div class="icons-price">
@@ -194,7 +194,7 @@
                 </div>
                 </div>
                 <div class="tour-box">
-                    <img src="images/New-Zealand.svg" alt="photo">
+                    <img src="images/New-Zealand.png" alt="photo">
                     <h2>New Zealand</h2>
                     <p>New Zealand is an island country in the southwestern Pacific Ocean. It consists of two main landmasses</p>
                                         <div class="icons-price">
@@ -221,7 +221,7 @@
                 </div>
                 </div>
                 <div class="tour-box">
-                    <img src="images/Bora-Bora.svg" alt="photo">
+                    <img src="images/Bora-Bora.png" alt="photo">
                     <h2>Bora Bora</h2>
                     <p>Bora Bora is a small South Pacific island northwest of Tahiti in French Polynesia. Surrounded by sand</p>
                                         <div class="icons-price">
@@ -248,7 +248,7 @@
                 </div>
                 </div>
                 <div class="tour-box">
-                    <img src="images/London.svg" alt="photo">
+                    <img src="images/London.png" alt="photo">
                     <h2>London</h2>
                     <p>London, the capital of England and the United Kingdom, is a 21st-century city with history stretching</p>
                     <div class="icons-price">
@@ -279,11 +279,41 @@
         <section class="blogs">
             <div class="main-guide">
                 <h4>blogs</h4>
-                <div class="guid-boxes">
+                <div class="main-guide-boxes">
+                    <div class="guide-boxes">
+                        <img src="images/kilimanjaro.svg" alt="photo">
+                        <div class="absolute-cover2">
+                             <div class="absolute-cover-title">
+                                <h4 class="kili-text">The Ultimate Guide to Climbing Mount Kilimanjaro</h4>
+                            </div>
+                        </div>
+                    </div>
+                        
+                    <div class="guide-boxes">
+                        <div class="guide-boxes">
+                            <img src="images/new-traveler.svg" alt="photo">
+                            <div class="absolute-cover2">
+                                <div class="absolute-cover-title">
+                                    <h4 class="travel-text">12 Things I’d Tell Any New Traveler</h4>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="guide-boxes">
+                            <img src="images/female-travelers.svg" alt="photo">
+                            <div class="absolute-cover2">
+                                <div class="absolute-cover-title">
+                                    <h4 class="travel-text">The Ultimate Packing List for Female Travelers</h4>
+                                </div>
+
+                            </div>
+
+                        </div>
 
 
+
+                    </div>
                 </div>
-            </div>
         </section>
     </div>
 </body>
