--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
         
     </div>
     <footer >
-        <div class="container flex">
+        <div class="footer-container container flex">
             <p>Copyright © 2020 Travelo. All rights reserved</p>
             <nav class="main-nav ">
                 <ul class="menu-list">
@@ -372,6 +372,23 @@
                     <li class="menu-list-item">Blog</li>
                 </ul>
             </nav>
+            <div class="icons">
+                <div class="icon">
+                    <img src="images/facebook.svg" alt="facebook">
+                </div>
+                <div class="icon">
+                    <img src="images/linkedin.svg" alt="facebook">
+                </div>
+                <div class="icon">
+                    <img src="images/instagram1.svg" alt="instagram">
+                    <div class="instagram2">
+                        <img src="images/instagram2.svg" alt="instagram">
+                        <div class="instagram3">
+                            <img src="images/instagram3.svg" alt="instagram">
+                        </div>
+                    </div>
+                </div>
+            </div>
 
 
         </div>
