--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                     <img src="images/facebook.svg" alt="facebook">
                 </div>
                 <div class="icon">
-                    <img src="images/linkedin.svg" alt="facebook">
+                    <img src="images/linkedin.svg" alt="linkedin">
                 </div>
                 <div class="icon">
                     <img src="images/instagram1.svg" alt="instagram">
