--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
                     <p class="kms"> 1000 Kms</p>
                     <p class="night"> Approx 2 night trip</p>
                 </div>
+                <div class="bcg-cover"></div>
                 </div>
                 <div class="tour-box">
                     <img src="images/Thailand.png" alt="photo">
