--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                     <img src="images/facebook.svg" alt="facebook">
                 </div>
                 <div class="icon">
-                    <img src="images/linkedin.svg" alt="linkedin">
+                    <img src="/images/linkedin.svg" alt="linkedin">
                 </div>
                 <div class="icon">
                     <img src="images/instagram1.svg" alt="instagram">
