--- a/index.html
+++ b/index.html
@@ -377,6 +377,9 @@
                 <div class="icon">
                     <img src="images/facebook.svg" alt="facebook">
                 </div>
+                <div class="icon">
+                    <img src="images/facebook.svg" alt="facebook">
+                </div>
                 
                 <div class="icon">
                     <img src="images/instagram1.svg" alt="instagram">
