--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                     <img src="images/facebook.svg" alt="facebook">
                 </div>
                 <div class="icon">
-                    <img src="images/food.svg" alt="plane">
+                    <img src="images/linkedin.svg" alt="plane">
                 </div>
                 
                 <div class="icon">
