--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
                         <li class="menu-list-item">Blog</li>
                     </ul>
                 </nav>
+                <div class="header-burger">
+                    <div class="burger-items"></div>
+                    <div class="burger-items"></div>
+                    <div class="burger-items"></div>
+
+                </div>
 
                 <div class="connect-button">
                     <a class="connect-button-link" href="#">Connect</a>
@@ -360,7 +366,7 @@
     </div>
     <footer >
         <div class="footer-container container flex">
-            <p>Copyright © 2020 Travelo. All rights reserved</p>
+            <p class="copyright">Copyright © 2020 Travelo. All rights reserved</p>
             <nav class="main-nav ">
                 <ul class="menu-list">
                     <li class="menu-list-item">Home</li>
