--- a/index.html
+++ b/index.html
@@ -71,6 +71,23 @@
                 </div>
             </div>
         </div>
+        <div class="block2">
+            <div class="check-box-boxes">
+                <h4>Where You Want to go</h4>
+                <span>Search your Location</span>
+            </div>
+            <div class="check-box-boxes">
+                <h4>Check-in </h4>
+                <span>Add Date</span>
+            </div>
+            <div class="check-box-boxes">
+                <h4>Check-out </h4>
+                <span>Add Date</span>
+            </div>
+            <div class="">
+                <a class="explore" href="#">Explore Now</a>
+            </div>
+        </div>
         <section class="section-info ">
             <div class="box-info">
                 <div class="box-logos">
