--- a/index.html
+++ b/index.html
@@ -73,16 +73,16 @@
         </div>
         <div class="block2">
             <div class="check-box-boxes">
-                <h4>Where You Want to go</h4>
-                <span>Search your Location</span>
+                <h4>Destination</h4>
+                <span>Location</span>
             </div>
             <div class="check-box-boxes">
                 <h4>Check-in </h4>
-                <span>Add Date</span>
+                <span>Date</span>
             </div>
             <div class="check-box-boxes">
                 <h4>Check-out </h4>
-                <span>Add Date</span>
+                <span>Date</span>
             </div>
             <div class="">
                 <a class="explore" href="#">Explore Now</a>
