--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
                 <nav class="main-nav ">
                     <ul class="menu-list">
-                        <li class="menu-list-item">kv</li>
+                        <li class="menu-list-item">Home</li>
                         <li class="menu-list-item">About</li>
                         <li class="menu-list-item">Places</li>
                         <li class="menu-list-item">Careers</li>
